[gd_scene load_steps=6 format=2]

[ext_resource path="res://OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://resource/audio/annoying_song.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/fonts/Arvo/Arvo-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resource/models/custom/bedroom/MenuTheme.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="AudioSlider" type="HSlider" parent="."]
margin_left = 402.0
margin_top = 336.0
margin_right = 970.0
margin_bottom = 352.0
min_value = -30.0
max_value = 5.0

[node name="Label" type="Label" parent="."]
margin_left = 217.0
margin_top = 311.0
margin_right = 376.0
margin_bottom = 360.0
custom_fonts/font = SubResource( 1 )
text = "Volume"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 2.0
autoplay = true

[node name="BackButton" type="Button" parent="."]
margin_left = 504.0
margin_top = 603.0
margin_right = 742.0
margin_bottom = 700.0
theme = ExtResource( 4 )
text = "BACK"

[connection signal="value_changed" from="AudioSlider" to="." method="_on_AudioSlider_value_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
